[package]
name = "bevy_prototype_postprocess"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = "0.9"
wgpu-types = "0.9"
bytemuck = { version = "1.7.0", features = ["derive"] }
bitflags = "1.2"

[profile.release]
opt-level = 3

[dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "particles"
default-features = false
features = ["render", "bevy_render2"]

[dependencies.crevice]
git = "https://github.com/james7132/bevy"
branch = "particles"

[dev-dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "particles"
default-features = true
features = ["render", "bevy_render2"]
